# ai-agent

./: Modelfile_q4  Modelfile_q8
agent_v6/: llm.py
hwpx-ai-agent/: .gitignore  README.md  docker-compose.yml
hwpx-ai-agent/backend/: .env.example  Dockerfile  pyproject.toml
hwpx-ai-agent/backend/app/: __init__.py  config.py  main.py
hwpx-ai-agent/backend/app/agents/: __init__.py  model_router.py  orchestrator.py  planner.py  prompts.py
hwpx-ai-agent/backend/app/api/: agents.py  approvals.py  documents.py  rules.py  settings.py
hwpx-ai-agent/backend/app/db/: database.py  models.py  repositories.py
hwpx-ai-agent/backend/app/hwpx/: __init__.py  diff.py  document_model.py  namespaces.py  package.py  parser.py  table_editor.py  template_fields.py  text_editor.py  validator.py
hwpx-ai-agent/backend/app/llm/: __init__.py  json_parser.py  ollama_client.py  schemas.py
hwpx-ai-agent/backend/app/security/: __init__.py  file_security.py  zip_security.py
hwpx-ai-agent/backend/app/services/: audit_service.py  document_service.py  storage_service.py
hwpx-ai-agent/backend/app/tools/: __init__.py  document_tools.py  number_tools.py  registry.py  rule_tools.py  table_tools.py  validation_tools.py
hwpx-ai-agent/backend/tests/: conftest.py  test_agent_plan.py  test_hwpx_parser.py
hwpx-ai-agent/docs/: api.md  architecture.md  hwpx-support.md  security.md
hwpx-ai-agent/frontend/: package.json  pnpm-lock.yaml
hwpx-ai-agent/frontend/src/: main.tsx  (+1 more)
hwpx-ai-agent/scripts/: setup_ollama_models.ps1  setup_ollama_models.sh  smoke_test_backend.py  verify_environment.py
(+3 files in other folders)
