[project]
name = "hwpx-ai-agent-backend"
version = "0.1.0"
description = "Local-only HWPX document automation AI agent"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "defusedxml>=0.7",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

